03-vs/canary/overlays/canary/front-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-v2
  labels:
    app: front
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
      version: v2
  template:
    metadata:
      labels:
        app: front
        version: v2
    spec:
      serviceAccountName: front-v2
      containers:
      - name: app
        image: docker.io/istio/examples-helloworld-v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
